--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   },
   "require": {
     "php": "^7.4|^8.0",
-    "illuminate/support": "^8.0",
-    "statamic/cms": "3.0.*"
+    "illuminate/support": "^7.0|^8.0"
   },
   "require-dev": {
     "orchestra/testbench": "^6.0",
