--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   },
   "require": {
     "php": "^7.4|^8.0",
-    "illuminate/support": "^7.0|^8.0"
+    "illuminate/support": "^7.0|^8.0",
+    "league/commonmark": "^1.5"
   },
   "require-dev": {
     "orchestra/testbench": "^6.0",
