--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "email": "kontakt@visuellverstehen.de"
   },
   "require": {
-    "php": "^7.4|^8.0",
-    "illuminate/support": "^7.0|^8.0",
+    "php": "^8.0",
+    "illuminate/support": "^8.0",
     "league/commonmark": "^1.5"
   },
   "require-dev": {
