--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "require": {
     "php": "^7.0|^8.0",
-    "illuminate/support": "^8.0|^9.0",
+    "illuminate/support": "^7.0|^8.0|^9.0",
     "league/commonmark": "^1.5"
   },
   "require-dev": {
