--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require": {
     "php": "^7.0|^8.0",
     "illuminate/support": "^7.0|^8.0|^9.0",
-    "league/commonmark": "^1.5"
+    "league/commonmark": "^1.5|^2.0"
   },
   "require-dev": {
     "orchestra/testbench": "^6.0",
