--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,11 +9,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.4, 8.0]
-        laravel: [8.*, 7.*]
+        php: [7.4, 8.0, 8.1]
+        laravel: [9.*, 8.*, 7.*]
         dependency-version: [prefer-lowest, prefer-stable]
         os: [ubuntu-latest]
         include:
+          - laravel: 9.*
+            testbench: 7.*
           - laravel: 8.*
             laravel-constraint: ^8.18.1
           - laravel: 8.*
