--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,9 @@ jobs:
           - php: 8.0
             dependency-version: prefer-lowest
             additional-deps: '"mockery/mockery:>=1.3.3"'
+        exclude:
+          - php: 7.4
+            laravel: 9.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
