--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,10 @@ jobs:
         exclude:
           - php: 7.4
             laravel: 9.*
+          - php: 8.1
+            laravel: 8.*
+          - php: 8.1
+            laravel: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
