--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         php: [7.4, 8.0, 8.1]
-        laravel: [9.*, 8.*, 7.*]
+        laravel: [9.*, 8.*]
         dependency-version: [prefer-lowest, prefer-stable]
         os: [ubuntu-latest]
         include:
@@ -20,8 +20,6 @@ jobs:
             laravel-constraint: ^8.18.1
           - laravel: 8.*
             testbench: 6.*
-          - laravel: 7.*
-            testbench: 5.*
           - php: 7.4
             dependency-version: prefer-lowest
             additional-deps: '"mockery/mockery:>=1.2.3"'
@@ -33,8 +31,6 @@ jobs:
             laravel: 9.*
           - php: 8.1
             laravel: 8.*
-          - php: 8.1
-            laravel: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
